<resources>
    <string name="more_app">More App</string>
    <string name="install_now">INSTALL NOW</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="you_may_like">You might also like</string>
    <string name="install">INSTALL</string>
    <string name="ad">AD</string>
    <string name="suggested_app">Suggested App</string>
    <string name="exit">EXIT</string>
    <string name="cancel">CANCEL</string>

    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="abmob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="abmob_full_id">	ca-app-pub-3940256099942544/1033173712</string>
    <string name="loading_ads">Loading ads...</string>
</resources>
