<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/background_dialog_suggest">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:text="@string/suggested_app"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.sdk.ads.view.CustomViewpager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="50dp"
        android:paddingBottom="20dp"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcvDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewpager"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rcvDot"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/exit"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rcvDot"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:layout_toLeftOf="@+id/exit"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/cancel"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />
</RelativeLayout>